source/stylesheets/_application.css.scss
//= normalize

@import "normalize";
@import "bourbon";
@import "partials/variables";
@import "bitters/bitters";
@import "neat";
@import "partials/header";
@import "partials/footer";
@import "partials/code";

hr {
  margin: 77px auto;
  width: 220px;
}

article {
  margin-bottom: 77px;
}

img.needs-border {
  border: 1px solid #021a40;
}

iframe.centered {
  display: block;
  margin: 20px auto;
}

@media (max-width: 767px) {
  body {
    word-wrap: break-word;
  }
}

